# api-vendas-fastapi

./: .gitignore  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 7ea48bbba3f6_create_initial_tables.py  d5e84be5d9be_remove_endereco_table.py  e76a67f61b8d_add_endereco_fields_to_cliente.py
app/: database.py  main.py
app/models/: __init__.py  cliente.py  endereco.py  funcionario.py  item_venda.py  produto.py  venda.py
app/routers/: cliente.py
app/schemas/: cliente.py  endereco.py  funcionario.py  item_venda.py  produto.py  venda.py
app/services/: cliente_service.py
