[project]
name = "projeto-api-vendas"
version = "0.1.0"
description = "API REST para gestão de clientes, produtos e vendas"
authors = [
    {name = "Gabriela Lyra",email = "gabi.cardoso.lyra@gmail.com"}
]
license = {text = "MIT"}
requires-python = "^3.12"
dependencies = [
    "fastapi (>=0.133.0,<0.134.0)",
    "uvicorn (>=0.41.0,<0.42.0)",
    "sqlalchemy (>=2.0.47,<3.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "alembic (>=1.18.4,<2.0.0)",
    "faker (>=40.5.1,<41.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
